# mathtool

./: Cargo.toml  README.md  _config.yml
images/: images.md
src/: add.rs  devide.rs  divide.rs  factorial.rs  main.rs  multiply.rs  primes.rs  subtract.rs
