[package]
name = "mathtool"
version = "0.1.1"
authors = ["Evan Gubarev <evan@evangubarev.com>"]
edition = "2018"
license = "GPL-3.0"
description = "Mathtool is a collection of CLI's that add basic math functions to bash. To use these programs, first install this crate, and then run the program you need from bash. Valid programs are 'factorial', 'primes', 'add', 'subtract', 'devide', 'multiply'."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/primes.rs"
name = "primes"

[[bin]]
path = "src/factorial.rs"
name = "factorial"

[[bin]]
path = "src/add.rs"
name = "add"

[[bin]]
path = "src/subtract.rs"
name = "sub"

[[bin]]
path = "src/subtract.rs"
name = "subtract"

[[bin]]
path = "src/multiply.rs"
name = "multiply"

[[bin]]
path = "src/divide.rs"
name = "div"

[[bin]]
path = "src/devide.rs"
name = "divide"

[dependencies]
text_io = "0.1.8"
